--- a/app/src/main/res/drawable/border_rounded_corner.xml
+++ b/app/src/main/res/drawable/border_rounded_corner.xml
@@ -1,10 +1,13 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <stroke android:width="1dip" android:color="#E6E6E6"/>
-    <corners android:radius="@dimen/_20sdp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <stroke
+        android:width="1dip"
+        android:color="#E6E6E6" />
+    <corners android:radius="@dimen/_20sdp" />
     <gradient
-        android:type="linear"
+        android:centerColor="#B42254"
+        android:endColor="#B42254"
         android:gradientRadius="150%"
         android:startColor="#FF6FA0"
-        android:centerColor="#B42254"
-        android:endColor="#B42254" />
+        android:type="linear" />
 </shape>
