--- a/app/src/main/res/drawable/ic_availability_settings.xml
+++ b/app/src/main/res/drawable/ic_availability_settings.xml
@@ -1,5 +1,36 @@
-<vector android:height="24dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M12,22H5c-1.11,0 -2,-0.9 -2,-2L3.01,6c0,-1.1 0.88,-2 1.99,-2h1V2h2v2h8V2h2v2h1c1.1,0 2,0.9 2,2v6h-2v-2H5v10h7V22zM22.13,16.99l0.71,-0.71c0.39,-0.39 0.39,-1.02 0,-1.41l-0.71,-0.71c-0.39,-0.39 -1.02,-0.39 -1.41,0l-0.71,0.71L22.13,16.99zM21.42,17.7l-5.3,5.3H14v-2.12l5.3,-5.3L21.42,17.7z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="32dp"
+    android:viewportWidth="24"
+    android:viewportHeight="30">
+    <path
+        android:fillColor="#FF000000"
+        android:fillType="evenOdd"
+        android:pathData="M17,11c-3.174,0 -5.75,2.576 -5.75,5.75c0,3.174 2.576,5.75 5.75,5.75c3.174,0 5.75,-2.576 5.75,-5.75c0,-3.174 -2.576,-5.75 -5.75,-5.75ZM17,12.5c2.346,0 4.25,1.904 4.25,4.25c0,2.346 -1.904,4.25 -4.25,4.25c-2.346,0 -4.25,-1.904 -4.25,-4.25c0,-2.346 1.904,-4.25 4.25,-4.25Z"
+        android:strokeLineJoin="round" />
+    <path
+        android:fillColor="#FF000000"
+        android:fillType="evenOdd"
+        android:pathData="M15.75,14.75l0,2.5c0,0.414 0.336,0.75 0.75,0.75l2.5,0c0.414,-0 0.75,-0.336 0.75,-0.75c-0,-0.414 -0.336,-0.75 -0.75,-0.75l-1.75,0c0,0 0,-1.75 0,-1.75c-0,-0.414 -0.336,-0.75 -0.75,-0.75c-0.414,0 -0.75,0.336 -0.75,0.75Z"
+        android:strokeLineJoin="round" />
+    <path
+        android:fillColor="#FF000000"
+        android:fillType="evenOdd"
+        android:pathData="M22.75,10.75l-0,-5c-0,-0.729 -0.29,-1.429 -0.805,-1.945c-0.516,-0.515 -1.216,-0.805 -1.945,-0.805c-3.832,0 -12.168,0 -16,0c-0.729,-0 -1.429,0.29 -1.945,0.805c-0.515,0.516 -0.805,1.216 -0.805,1.945c0,3.368 0,10.132 0,13.5c0,0.729 0.29,1.429 0.805,1.945c0.516,0.515 1.216,0.805 1.945,0.805c2.652,-0 7,-0 7,-0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75c0,-0 -4.348,-0 -7,-0c-0.332,0 -0.649,-0.132 -0.884,-0.366c-0.234,-0.235 -0.366,-0.552 -0.366,-0.884c0,-3.368 0,-10.132 -0,-13.5c0,-0.332 0.132,-0.649 0.366,-0.884c0.235,-0.234 0.552,-0.366 0.884,-0.366l16,0c0.332,-0 0.649,0.132 0.884,0.366c0.234,0.235 0.366,0.552 0.366,0.884c-0,0 -0,5 -0,5c-0,0.414 0.336,0.75 0.75,0.75c0.414,0 0.75,-0.336 0.75,-0.75Z"
+        android:strokeLineJoin="round" />
+    <path
+        android:fillColor="#FF000000"
+        android:fillType="evenOdd"
+        android:pathData="M22,7.5l-20,0c-0.414,0 -0.75,0.336 -0.75,0.75c0,0.414 0.336,0.75 0.75,0.75l20,0c0.414,0 0.75,-0.336 0.75,-0.75c0,-0.414 -0.336,-0.75 -0.75,-0.75Z"
+        android:strokeLineJoin="round" />
+    <path
+        android:fillColor="#FF000000"
+        android:fillType="evenOdd"
+        android:pathData="M16.25,2.25l0,3c-0,0.414 0.336,0.75 0.75,0.75c0.414,0 0.75,-0.336 0.75,-0.75l0,-3c-0,-0.414 -0.336,-0.75 -0.75,-0.75c-0.414,0 -0.75,0.336 -0.75,0.75Z"
+        android:strokeLineJoin="round" />
+    <path
+        android:fillColor="#FF000000"
+        android:fillType="evenOdd"
+        android:pathData="M6.25,2.25l0,3c0,0.414 0.336,0.75 0.75,0.75c0.414,-0 0.75,-0.336 0.75,-0.75l0,-3c0,-0.414 -0.336,-0.75 -0.75,-0.75c-0.414,-0 -0.75,0.336 -0.75,0.75Z"
+        android:strokeLineJoin="round" />
 </vector>
