--- a/app/src/main/res/drawable/ic_profile_menu_icon.xml
+++ b/app/src/main/res/drawable/ic_profile_menu_icon.xml
@@ -1,9 +1,16 @@
-<vector android:height="28.5dp" android:viewportHeight="38"
-    android:viewportWidth="32" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00000000"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="28.5dp"
+    android:viewportWidth="32"
+    android:viewportHeight="38">
+    <path
+        android:fillColor="#00000000"
         android:pathData="M16,10m-7,0a7,7 0,1 1,14 0a7,7 0,1 1,-14 0"
-        android:strokeColor="#F0DBE2" android:strokeWidth="6"/>
-    <path android:fillColor="#00000000"
+        android:strokeWidth="6"
+        android:strokeColor="#F0DBE2" />
+    <path
+        android:fillColor="#00000000"
         android:pathData="M3.348,35C4.702,29.267 9.853,25 16,25C22.147,25 27.298,29.267 28.652,35H3.348Z"
-        android:strokeColor="#F0DBE2" android:strokeWidth="6"/>
+        android:strokeWidth="6"
+        android:strokeColor="#F0DBE2" />
 </vector>
