--- a/app/src/main/res/drawable/ic_sign_out.xml
+++ b/app/src/main/res/drawable/ic_sign_out.xml
@@ -1,5 +1,12 @@
-<vector android:autoMirrored="true" android:height="24dp"
-    android:tint="#000000" android:viewportHeight="24"
-    android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M17,7l-1.41,1.41L18.17,11H8v2h10.17l-2.58,2.58L17,17l5,-5zM4,5h8V3H4c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h8v-2H4V5z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="32dp"
+    android:viewportWidth="512"
+    android:viewportHeight="640">
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M110.7,432h134.2c25.9,0 47.1,-20.8 47.1,-46.7v-35.6c0,-9.4 -7.6,-17 -17,-17s-17,7.6 -17,17v35.6c0,7.2 -5.9,12.7 -13.1,12.7H110.7c-7.2,0 -12.7,-5.5 -12.7,-12.7V126.7c0,-7.2 5.5,-12.7 12.7,-12.7h134.2c7.2,0 13.1,5.5 13.1,12.7v34.9c0,9.4 7.6,17 17,17s17,-7.6 17,-17v-34.9c0,-25.9 -21.2,-46.7 -47.1,-46.7H110.7C84.8,80 64,100.8 64,126.7v258.6C64,411.2 84.8,432 110.7,432z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M354.3,344.5c3.2,2.8 7.2,4.2 11.1,4.2c4.8,0 9.5,-2 12.8,-5.9l64.4,-74.2c3.4,-3.1 5.6,-7.6 5.6,-12.6c0,-5.4 -2.5,-10.2 -6.5,-13.3l-64.4,-64.4c-6.6,-6.6 -17.4,-6.6 -24,0c-6.6,6.6 -6.6,17.4 0,24l36.7,36.7H170.3c-9.4,0 -17,7.6 -17,17s7.6,17 17,17h223.5l-41.2,47.5C346.4,327.6 347.2,338.4 354.3,344.5z"/>
 </vector>
