fix: icon change in registration screens

--- a/app/src/main/res/drawable/add_photo.xml
+++ b/app/src/main/res/drawable/add_photo.xml
@@ -1,5 +1,13 @@
-<vector android:height="24dp" android:tint="@color/black"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/black" android:pathData="M19.5 12c-2.483 0-4.5 2.015-4.5 4.5s2.017 4.5 4.5 4.5 4.5-2.015 4.5-4.5-2.017-4.5-4.5-4.5zm2.5 5h-2v2h-1v-2h-2v-1h2v-2h1v2h2v1zm-18 0l4-5.96 2.48 1.96 2.52-4 1.853 2.964c-1.271 1.303-1.977 3.089-1.827 5.036h-9.026zm10.82 4h-14.82v-18h22v7.501c-.623-.261-1.297-.422-2-.476v-5.025h-18v14h11.502c.312.749.765 1.424 1.318 2zm-9.32-11c-.828 0-1.5-.671-1.5-1.5 0-.828.672-1.5 1.5-1.5s1.5.672 1.5 1.5c0 .829-.672 1.5-1.5 1.5z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="30dp"
+    android:viewportWidth="24"
+    android:viewportHeight="30">
+  <path
+      android:pathData="M20,1.25C20.414,1.25 20.75,1.586 20.75,2V3.25L22,3.25C22.414,3.25 22.75,3.586 22.75,4C22.75,4.414 22.414,4.75 22,4.75H20.75V6C20.75,6.414 20.414,6.75 20,6.75C19.586,6.75 19.25,6.414 19.25,6V4.75H18C17.586,4.75 17.25,4.414 17.25,4C17.25,3.586 17.586,3.25 18,3.25L19.25,3.25V2C19.25,1.586 19.586,1.25 20,1.25Z"
+      android:fillColor="#000000"/>
+  <path
+      android:pathData="M15.309,3.25C15.27,3.494 15.25,3.745 15.25,4C15.25,6.623 17.377,8.75 20,8.75C20.255,8.75 20.506,8.73 20.75,8.691V18C20.75,20.623 18.623,22.75 16,22.75H6C3.377,22.75 1.25,20.623 1.25,18V8C1.25,5.377 3.377,3.25 6,3.25H15.309ZM8,10C9.105,10 10,9.105 10,8C10,6.895 9.105,6 8,6C6.895,6 6,6.895 6,8C6,9.105 6.895,10 8,10ZM17.183,15.971C17.982,17.304 17.022,19 15.468,19H6.236C4.749,19 3.782,17.435 4.447,16.106L5.858,13.284C6.329,12.343 7.671,12.343 8.142,13.284C8.592,14.185 9.86,14.233 10.378,13.37L11.285,11.858C12.062,10.564 13.938,10.564 14.715,11.858L17.183,15.971Z"
+      android:fillColor="#000000"
+      android:fillType="evenOdd"/>
 </vector>
