--- a/app/src/main/res/drawable/ic_occupation.xml
+++ b/app/src/main/res/drawable/ic_occupation.xml
@@ -1,6 +1,12 @@
-<vector android:height="24dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white"
-        android:fillType="evenOdd" android:pathData="M14,6L14,4h-4v2h4zM4,8v11h16L20,8L4,8zM20,6c1.11,0 2,0.89 2,2v11c0,1.11 -0.89,2 -2,2L4,21c-1.11,0 -2,-0.89 -2,-2l0.01,-11c0,-1.11 0.88,-2 1.99,-2h4L8,4c0,-1.11 0.89,-2 2,-2h4c1.11,0 2,0.89 2,2v2h4z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="32dp"
+    android:viewportWidth="24"
+    android:viewportHeight="30">
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M22.75,7A1.752,1.752 0,0 0,21 5.25L18.75,5.25L18.75,4.494A2.728,2.728 0,0 0,16.702 1.833a19.336,19.336 0,0 0,-9.397 -0.002A2.732,2.732 0,0 0,5.25 4.494L5.25,5.25L3,5.25A1.752,1.752 0,0 0,1.25 7v4.256a1.721,1.721 0,0 0,1 1.556L2.25,19A1.752,1.752 0,0 0,4 20.75L20,20.75A1.752,1.752 0,0 0,21.75 19L21.75,12.812a1.721,1.721 0,0 0,1 -1.556ZM6.75,4.494a1.233,1.233 0,0 1,0.92 -1.208,17.821 17.821,0 0,1 8.665,0.002A1.229,1.229 0,0 1,17.25 4.494L17.25,5.25L6.75,5.25ZM20.25,19a0.253,0.253 0,0 1,-0.25 0.25L4,19.25A0.253,0.253 0,0 1,3.75 19L3.75,13.308l7.172,2.152a3.726,3.726 0,0 0,2.155 0l5.701,-1.71a0.75,0.75 0,1 0,-0.431 -1.437L12.646,14.023a2.241,2.241 0,0 1,-1.292 0l-8.425,-2.527A0.249,0.249 0,0 1,2.75 11.256L2.75,7A0.25,0.25 0,0 1,3 6.75L21,6.75a0.25,0.25 0,0 1,0.25 0.25v4.256a0.248,0.248 0,0 1,-0.178 0.239l-0.287,0.086c-0.014,0.004 -0.023,0.015 -0.037,0.02a0.713,0.713 0,0 0,-0.136 0.073,0.885 0.885,0 0,0 -0.283,0.304 0.744,0.744 0,0 0,-0.041 0.13,0.713 0.713,0 0,0 -0.031,0.152c-0.001,0.014 -0.008,0.026 -0.008,0.04Z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M12,11.5m-1.25,0a1.25,1.25 0,1 1,2.5 0a1.25,1.25 0,1 1,-2.5 0"/>
 </vector>
