--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -18,7 +18,7 @@
         android:layout_marginEnd="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:fontFamily="@font/ptsans_bold"
-        android:text="Settings &amp; Info"
+        android:text="More"
         android:textColor="@color/black"
         android:textSize="@dimen/_25ssp" />
 
