--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -112,7 +112,8 @@
         android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_20sdp"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"/>
 
     <EditText
         android:id="@+id/layout_input_message"
@@ -129,7 +130,7 @@
         android:layout_alignParentBottom="true"
         android:layout_toStartOf="@id/fab_send"
         android:background="@drawable/chat_message_input_drawable"
-        android:visibility="visible"
+        android:visibility="gone"
         android:focusable="true"
         android:focusableInTouchMode="true"/>
 
@@ -142,7 +143,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_5sdp"
-        android:visibility="visible">
+        android:visibility="gone">
         <ImageView
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
