feat: add shimmer loading while profile gets loaded

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingTop="@dimen/_30sdp"
     tools:context=".views.home.ProfileFragment">
@@ -31,6 +32,17 @@
         android:id="@+id/recyclerview_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/view" />
+        android:layout_below="@id/view"
+        android:visibility="gone"/>
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_view_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/view"
+        android:paddingBottom="@dimen/_10sdp"
+        shimmer:duration="800">
+        <include layout="@layout/profile_loading_shimmer"/>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 </RelativeLayout>
