--- a/app/src/main/res/layout/profile_loading_shimmer.xml
+++ b/app/src/main/res/layout/profile_loading_shimmer.xml
@@ -34,6 +34,7 @@
             android:id="@+id/name_text"
             android:layout_width="@dimen/_100sdp"
             android:layout_height="wrap_content"
+            android:paddingTop="@dimen/_5sdp"
             android:layout_alignParentStart="true"
             android:fontFamily="@font/ptsans_bold"
             android:text=""
