--- a/app/src/main/res/layout/report_profile_dialog.xml
+++ b/app/src/main/res/layout/report_profile_dialog.xml
@@ -94,7 +94,7 @@
             android:textSize="@dimen/_14ssp" />
 
         <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/slot_2"
+            android:id="@+id/threatsOrViolence"
             style="@style/CustomCheckBoxStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
