--- a/app/src/main/res/layout/row_chat_room.xml
+++ b/app/src/main/res/layout/row_chat_room.xml
@@ -45,8 +45,20 @@
                 android:fontFamily="@font/ptsans_regular"
                 android:textSize="@dimen/_14ssp"
                 android:maxLines="1"/>
+
+            <TextView
+                android:id="@+id/message_blocked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="You blocked this user"
+                android:textColor="@color/ted_image_picker_primary_pressed"
+                android:fontFamily="@font/ptsans_bold"
+                android:textSize="@dimen/_12ssp"
+                android:maxLines="1"
+                android:visibility="gone"/>
         </LinearLayout>
     </LinearLayout>
+
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
