feat: add shimmer view as progress view in Upcoming Dates screen

--- a/app/src/main/res/layout/activity_upcoming_dates.xml
+++ b/app/src/main/res/layout/activity_upcoming_dates.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".views.settings.UpcomingDatesActivity">
+
     <TextView
         android:id="@+id/screentitle"
         android:layout_width="match_parent"
@@ -43,5 +43,29 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_view_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/view"
+        android:paddingBottom="@dimen/_10sdp"
+        shimmer:duration="800">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <include layout="@layout/upcoming_date_placeholder" />
+
+            <include layout="@layout/upcoming_date_placeholder" />
+
+            <include layout="@layout/upcoming_date_placeholder" />
+
+            <include layout="@layout/upcoming_date_placeholder" />
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 </LinearLayout>
