--- a/app/src/main/res/layout/activity_upcoming_dates.xml
+++ b/app/src/main/res/layout/activity_upcoming_dates.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:shimmer="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -24,11 +24,14 @@
         android:textSize="@dimen/_25ssp" />
 
     <View
+        android:id="@+id/view_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_1sdp"
-        android:background="#1A000000" />
+        android:background="#1A000000"
+        android:layout_below="@id/screentitle"/>
 
     <TextView
+        android:id="@+id/text_disclaimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_20sdp"
@@ -38,20 +41,23 @@
         android:fontFamily="@font/darkergrotesque_medium"
         android:text="You will find all your upcoming dates for the weekend in this screen."
         android:textColor="@color/black"
-        android:textSize="@dimen/_16ssp" />
+        android:textSize="@dimen/_16ssp"
+        android:layout_below="@id/view_title"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:layout_below="@id/view_title"/>
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_view_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/view"
+        android:layout_below="@id/text_disclaimer"
         android:paddingBottom="@dimen/_10sdp"
+        android:visibility="visible"
         shimmer:duration="800">
 
         <LinearLayout
@@ -68,4 +74,52 @@
             <include layout="@layout/upcoming_date_placeholder" />
         </LinearLayout>
     </com.facebook.shimmer.ShimmerFrameLayout>
-</LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/no_data_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/border_corner_drawable"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:layout_gravity="center"
+        android:paddingStart="@dimen/_20sdp"
+        android:paddingEnd="@dimen/_20sdp"
+        android:paddingTop="@dimen/_40sdp"
+        android:paddingBottom="@dimen/_40sdp"
+        android:layout_centerInParent="true"
+        android:layout_margin="@dimen/_20sdp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/nodata"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/text_title_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:fontFamily="@font/ptsans_bold"
+            android:text="No Upcoming Dates!"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_20ssp"
+            android:textAlignment="center"
+            android:layout_marginTop="@dimen/_20sdp"/>
+
+        <TextView
+            android:id="@+id/text_body_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/ptsans_regular"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:text="@string/no_upcoming_dates_disclaimer"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp"
+            android:textAlignment="center"/>
+
+    </LinearLayout>
+</RelativeLayout>
