--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -56,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background_gradient_screen"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -82,6 +82,19 @@
                 android:text="@string/no_recommendations"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_20ssp" />
+
+            <TextView
+                android:id="@+id/text_dating_phase_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:fontFamily="@font/ptsans_regular"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:text="August 7th - August 9th"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp"
+                android:visibility="visible"/>
 
             <TextView
                 android:id="@+id/text_body_message"
