--- a/app/src/main/res/layout/row_chat_room.xml
+++ b/app/src/main/res/layout/row_chat_room.xml
@@ -44,18 +44,23 @@
                 android:textColor="@color/black"
                 android:fontFamily="@font/ptsans_regular"
                 android:textSize="@dimen/_14ssp"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:layout_marginTop="@dimen/_4sdp"/>
 
             <TextView
                 android:id="@+id/message_blocked"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="You blocked this user"
-                android:textColor="@color/ted_image_picker_primary_pressed"
-                android:fontFamily="@font/ptsans_regular"
-                android:textSize="@dimen/_14ssp"
+                android:layout_gravity="center"
+                android:text=""
+                android:textColor="@color/black"
+                android:fontFamily="@font/darkergrotesque_semibold"
+                android:textSize="@dimen/_16ssp"
                 android:maxLines="1"
-                android:visibility="gone"/>
+                android:visibility="visible"
+                android:drawableTint="@color/black"
+                android:drawableStart="@drawable/ic_block"
+                android:drawablePadding="@dimen/_2sdp"/>
         </LinearLayout>
     </LinearLayout>
 
