--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -205,7 +205,7 @@
                     android:paddingTop="@dimen/_5sdp"
                     android:paddingBottom="@dimen/_5sdp"
                     android:fontFamily="@font/ptsans_regular"
-                    android:text="Deactivate Account"
+                    android:text="Delete Account"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14ssp" />
 
