fix: fix issue with displaying user preferences in Preference Settings

--- a/app/src/main/res/layout/activity_preference_settings.xml
+++ b/app/src/main/res/layout/activity_preference_settings.xml
@@ -331,7 +331,7 @@
                     android:background="@color/white"
                     android:fontFamily="@font/ptsans_regular"
                     android:gravity="center"
-                    android:hint="min"
+                    android:hint="max"
                     android:padding="10dp"
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
