fix: display notificcations on new Like and navigate to the Like You screen

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,7 +6,8 @@
     xmlns:shimmer="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingTop="@dimen/_30sdp"
-    tools:context=".views.home.ProfileFragment">
+    tools:context=".views.home.ProfileFragment"
+    android:id="@+id/containermain">
 
     <TextView
         android:id="@+id/screentitle"
