--- a/app/src/main/res/layout/notification_expanded.xml
+++ b/app/src/main/res/layout/notification_expanded.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/_5sdp"
@@ -7,19 +7,19 @@
 
     <ImageView
         android:id="@+id/imageview_notification_sender"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/_50sdp"
         android:layout_height="@dimen/_50sdp"
-        android:layout_weight="1"
         android:layout_marginEnd="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_3sdp"
         android:scaleType="centerCrop" />
 
     <LinearLayout
         android:id="@+id/layout_notification"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="5"
-        android:orientation="vertical">
+        android:layout_toEndOf="@id/imageview_notification_sender"
+        android:orientation="vertical"
+        android:layout_centerVertical="true">
 
         <TextView
             android:id="@+id/textview_notification_title"
@@ -38,4 +38,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
