--- a/app/src/main/res/layout/row_prompt_profile__left.xml
+++ b/app/src/main/res/layout/row_prompt_profile__left.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="@dimen/_15sdp"
     android:orientation="vertical">
 
@@ -57,7 +58,7 @@
 
     <View
         android:id="@+id/view_divider"
-        android:layout_width="@dimen/_5sdp"
+        android:layout_width="@dimen/_10sdp"
         android:layout_height="@dimen/_20sdp"
         android:layout_below="@id/layout_prompt_answer"
         android:layout_centerInParent="true"
@@ -77,7 +78,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_view"
             android:layout_width="0dp"
-            android:layout_height="@dimen/_100sdp"
+            android:layout_height="@dimen/_150sdp"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:clickable="true"
@@ -85,18 +86,19 @@
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:paddingTop="@dimen/_10sdp"
             android:paddingBottom="@dimen/_10sdp"
-            android:src="@drawable/person" />
+            android:src="@drawable/person"
+            app:civ_border_width="0dp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"/>
 
         <TextView
             android:id="@+id/text_caption"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:layout_weight="1"
             android:fontFamily="@font/ptsans_regular"
-            android:paddingTop="@dimen/_10sdp"
-            android:paddingBottom="@dimen/_10sdp"
             android:text="Fools are those that believe smiles are a sign of happiness."
             android:textColor="@color/textSubTitle"
             android:textSize="@dimen/_14ssp" />
