--- a/app/src/main/res/layout/fragment_like_you.xml
+++ b/app/src/main/res/layout/fragment_like_you.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/_30sdp"
+    android:layout_marginTop="@dimen/_5sdp"
     tools:context=".views.home.LikeYouFragment">
 
     <TextView
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_5sdp"
         android:fontFamily="@font/ptsans_bold"
         android:paddingStart="@dimen/_20sdp"
         android:paddingEnd="@dimen/_20sdp"
