--- a/app/src/main/res/layout/activity_upcoming_dates.xml
+++ b/app/src/main/res/layout/activity_upcoming_dates.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
+    android:layout_marginTop="@dimen/_5sdp"
     tools:context=".views.settings.UpcomingDatesActivity">
 
     <TextView
@@ -15,7 +16,6 @@
         android:layout_alignParentTop="true"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_30sdp"
         android:layout_marginEnd="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:fontFamily="@font/ptsans_bold"
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        android:layout_below="@id/view_title"/>
+        android:layout_below="@id/text_disclaimer"/>
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_view_container"
